feat: admin film

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
     sdk: flutter
   http: ^0.13.6
   flutter_secure_storage: ^5.0.2
+  image_picker: ^1.0.4
+  path: any
+  file_picker: 5.2.10
 
 dev_dependencies:
   flutter_test:
