--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,24 +1,28 @@
 name: cinemawithu_mobile
 description: "A new Flutter project."
 publish_to: 'none'
-version: 0.1.0
+version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.0
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.4.0
+  http: ^1.1.0
   flutter_secure_storage: ^9.2.4
   image_picker: ^1.0.4
   path: any
   file_picker: 10.1.9
+  cupertino_icons: ^1.0.2
+  shared_preferences: ^2.2.2
+  webview_flutter: ^4.2.2
+  webview_flutter_android: ^3.10.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
