--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   shared_preferences: ^2.2.2
   webview_flutter: ^4.2.2
   webview_flutter_android: ^3.10.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
