--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
   assets:
     - assets/images/logo_cinema.png
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/cinema_icon.jpg"
